# restfly

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Justfile  LICENSE  README.md  README.rst  codebook.toml  pyproject.toml  requirements.txt  setup.py  sonar-project.properties  test-requirements.txt  tox.ini
.github/workflows/: coverage.yml  deploy.yml  pipeline.yml  testing.yml  unit_tests.yml
docs/: Makefile  conf.py  index.rst  logo.pxm  reference.rst  requirements.txt  userguide.rst
docs/api/: endpoint.rst  errors.rst  iterator.rst  session.rst  utils.rst
docs/user/: advanced.rst  gettingstarted.rst  install.rst  intro.rst  pagination.rst  quickstart.rst
examples/: .env  README.md  main.py
examples/api/: iterator.py  session.py  users.py
examples/github_users_api/: README.md  main.py
examples/github_users_api/api/: iterator.py  session.py  users.py
examples/httpbin/: README.md  __init__.py  client.py  models.py
restfly/: __init__.py  _async.py  _base.py  _errors.py  _iterator.py  _models.py  _sync.py  _utils.py  _version.py  endpoint.py  errors.py  iterator.py  session.py  types.py  utils.py  version.py
tests/: conftest.py  test_apimodel.py  test_client_async.py  test_client_base.py  test_client_sync.py  test_endpoint.py  test_endpoint_async.py  test_endpoint_sync.py  test_errors.py  test_examples_httpbin_client.py  test_iterator.py  test_iterators.py  test_session.py  test_utils.py  test_utils_assignment.py  test_utils_unmarshal.py
tests/cassettes/: test_debug_logging.yaml  test_endpoint_base_request.yaml  test_endpoint_delete.yaml  test_endpoint_get.yaml  test_endpoint_head.yaml  test_endpoint_patch.yaml  test_endpoint_path_get.yaml  test_endpoint_post.yaml  test_endpoint_put.yaml  test_session_badgatewayerror.yaml  test_session_badrequesterror.yaml  test_session_base_path.yaml  test_session_box_non_json.yaml  test_session_catchall_error.yaml  test_session_conv_json_json.yaml  test_session_conv_json_non_json.yaml  test_session_delete.yaml  test_session_disable_box.yaml  test_session_expectationfailederror.yaml  test_session_forbiddenerror.yaml  test_session_full_uri.yaml  test_session_gatewaytimeouterror.yaml  test_session_get.yaml  test_session_head.yaml  test_session_invalidmethoderror.yaml  test_session_lengthrequirederror.yaml  test_session_methodnotimplimentederror.yaml  test_session_misdirectrequesterror.yaml  test_session_networkauthrequirederror.yaml  test_session_nolongerexistserror.yaml  test_session_notacceptableerror.yaml  test_session_notextendederror.yaml  test_session_notfounderror.yaml  test_session_patch.yaml  test_session_payloadtoolargeerror.yaml  test_session_post.yaml  test_session_preconditionfailederror.yaml  test_session_preconditionrequirederror.yaml  test_session_proxyauthenticationerror.yaml  test_session_put.yaml  (+17 more)
