[build-system]
requires        = ["setuptools"]
build-backend   = "setuptools.build_meta"


[project]
requires-python = ">=3.9"
dynamic         = ["version"]
description     = "REST API library framework"
readme          = "README.rst"
name            = "restfly"
authors         = [
    {name = "Steve McGrath", email = "smcgrath@tenable.com"}
]
license = {text = "MIT License"}
keywords        = ["rest", "api", "library"]
classifiers     = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies    = [
    "requests>=2.32.3",
    "python-box>=7.2.0",
    "arrow>=1.3.0",
    "typing-extensions>=4.12.2",
]


[project.urls]
Homepage        = "https://restfly.readthedocs.io"
Repository      = "https://github.com/librestfly/restfly"
Issues          = "https://github.com/librestfly/restfly/issues"
Changelog       = "https://github.com/librestfly/restfly/blob/master/CHANGELOG.md"


[tool.setuptools.dynamic]
version = {attr = "restfly.version.version"}


[tool.setuptools.packages.find]
include         = ["restfly*"]


[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
  ".nova",
  ".github",
  ".git",
  ".pytest_cache",
  "__pycache__"
]


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
fixable = [ "ALL" ]
unfixable = [ "B" ]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = false
docstring-code-line-length = "dynamic"


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]


[tool.uv]
dev-dependencies = [
    "bpython>=0.24",
    "furo==2024.5.6",
    "pip-audit>=2.6.1",
    "pyright>=1.1.381",
    "pytest-cov>=4.1.0",
    "pytest>=7.4.4",
    "responses>=0.23.3",
    "ruff>=0.6.4",
    "sphinx>=5.3.0",
    "pre-commit>=2.21.0",
]


[tool.pytest.ini_options]
addopts  = "--cov-report term-missing --cov=restfly"
filterwarnings = ["ignore::DeprecationWarning"]
