[project]
name = "RESTFly"
version = "2.0.0-a1"
description = "Write your own API Client libraries quickly."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-xml>=2.19.0",
]

[dependency-groups]
dev = [
    "build>=1.4.3",
    "hatch>=1.16.5",
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ptpython>=3.0.32",
    "pylsp-mypy>=0.7.1",
    "rust-just>=1.50.0",
]
docs = [
    "furo>=2025.12.19",
    "sphinx>=9.1.0",
    "sphinxcontrib-mermaid>=2.0.1",
]
test = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-httpx>=0.36.0",
    "ruff>=0.15.11",
    "rust-just>=1.50.0",
    "ty>=0.0.32",
]

[tool.pytest.ini_options]
pythonpath = [".", "examples"]
addopts = "--cov-report term-missing:skip-covered --cov=restfly"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ty.src]
respect-ignore-files = true


[tool.ty.environment]
extra-paths = ["./examples"]

[tool.esbonio.sphinx]
buildArguments = ["sphinx-build", "-M", "html", "docs", "docs/_build"]
pythonCommand = ["uv", "run", "python"]
